--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,546 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+.Rproj.user
+edf-feph.org-141555/1 .html
+edf-feph.org-141555/10 .html
+edf-feph.org-141555/11 .html
+edf-feph.org-141555/12 .html
+edf-feph.org-141555/13 .html
+edf-feph.org-141555/14 .html
+edf-feph.org-141555/15 .html
+edf-feph.org-141555/16 .html
+edf-feph.org-141555/17 .html
+edf-feph.org-141555/18 .html
+edf-feph.org-141555/19 .html
+edf-feph.org-141555/2 .html
+edf-feph.org-141555/20 .html
+edf-feph.org-141555/21 .html
+edf-feph.org-141555/22 .html
+edf-feph.org-141555/23 .html
+edf-feph.org-141555/24 .html
+edf-feph.org-141555/25 .html
+edf-feph.org-141555/26 .html
+edf-feph.org-141555/27 .html
+edf-feph.org-141555/28 .html
+edf-feph.org-141555/29 .html
+edf-feph.org-141555/3 .html
+edf-feph.org-141555/30 .html
+edf-feph.org-141555/31 .html
+edf-feph.org-141555/32 .html
+edf-feph.org-141555/33 .html
+edf-feph.org-141555/34 .html
+edf-feph.org-141555/35 .html
+edf-feph.org-141555/36 .html
+edf-feph.org-141555/37 .html
+edf-feph.org-141555/38 .html
+edf-feph.org-141555/39 .html
+edf-feph.org-141555/4 .html
+edf-feph.org-141555/40 .html
+edf-feph.org-141555/41 .html
+edf-feph.org-141555/42 .html
+edf-feph.org-141555/43 .html
+edf-feph.org-141555/44 .html
+edf-feph.org-141555/45 .html
+edf-feph.org-141555/46 .html
+edf-feph.org-141555/47 .html
+edf-feph.org-141555/48 .html
+edf-feph.org-141555/49 .html
+edf-feph.org-141555/5 .html
+edf-feph.org-141555/50 .html
+edf-feph.org-141555/51 .html
+edf-feph.org-141555/52 .html
+edf-feph.org-141555/53 .html
+edf-feph.org-141555/54 .html
+edf-feph.org-141555/55 .html
+edf-feph.org-141555/56 .html
+edf-feph.org-141555/6 .html
+edf-feph.org-141555/7 .html
+edf-feph.org-141555/8 .html
+edf-feph.org-141555/9 .html
+edf-feph.org-141552/1 .html
+edf-feph.org-141552/10 .html
+edf-feph.org-141552/100 .html
+edf-feph.org-141552/101 .html
+edf-feph.org-141552/102 .html
+edf-feph.org-141552/103 .html
+edf-feph.org-141552/104 .html
+edf-feph.org-141552/105 .html
+edf-feph.org-141552/106 .html
+edf-feph.org-141552/107 .html
+edf-feph.org-141552/108 .html
+edf-feph.org-141552/109 .html
+edf-feph.org-141552/11 .html
+edf-feph.org-141552/110 .html
+edf-feph.org-141552/111 .html
+edf-feph.org-141552/112 .html
+edf-feph.org-141552/113 .html
+edf-feph.org-141552/114 .html
+edf-feph.org-141552/115 .html
+edf-feph.org-141552/116 .html
+edf-feph.org-141552/117 .html
+edf-feph.org-141552/118 .html
+edf-feph.org-141552/119 .html
+edf-feph.org-141552/12 .html
+edf-feph.org-141552/120 .html
+edf-feph.org-141552/121 .html
+edf-feph.org-141552/122 .html
+edf-feph.org-141552/123 .html
+edf-feph.org-141552/124 .html
+edf-feph.org-141552/125 .html
+edf-feph.org-141552/126 .html
+edf-feph.org-141552/127 .html
+edf-feph.org-141552/128 .html
+edf-feph.org-141552/129 .html
+edf-feph.org-141552/13 .html
+edf-feph.org-141552/130 .html
+edf-feph.org-141552/131 .html
+edf-feph.org-141552/132 .html
+edf-feph.org-141552/133 .html
+edf-feph.org-141552/134 .html
+edf-feph.org-141552/135 .html
+edf-feph.org-141552/136 .html
+edf-feph.org-141552/137 .html
+edf-feph.org-141552/138 .html
+edf-feph.org-141552/139 .html
+edf-feph.org-141552/14 .html
+edf-feph.org-141552/140 .html
+edf-feph.org-141552/141 .html
+edf-feph.org-141552/142 .html
+edf-feph.org-141552/143 .html
+edf-feph.org-141552/144 .html
+edf-feph.org-141552/145 .html
+edf-feph.org-141552/146 .html
+edf-feph.org-141552/147 .html
+edf-feph.org-141552/148 .html
+edf-feph.org-141552/149 .html
+edf-feph.org-141552/15 .html
+edf-feph.org-141552/150 .html
+edf-feph.org-141552/151 .html
+edf-feph.org-141552/152 .html
+edf-feph.org-141552/153 .html
+edf-feph.org-141552/154 .html
+edf-feph.org-141552/155 .html
+edf-feph.org-141552/156 .html
+edf-feph.org-141552/157 .html
+edf-feph.org-141552/158 .html
+edf-feph.org-141552/159 .html
+edf-feph.org-141552/16 .html
+edf-feph.org-141552/160 .html
+edf-feph.org-141552/161 .html
+edf-feph.org-141552/162 .html
+edf-feph.org-141552/163 .html
+edf-feph.org-141552/164 .html
+edf-feph.org-141552/165 .html
+edf-feph.org-141552/166 .html
+edf-feph.org-141552/167 .html
+edf-feph.org-141552/168 .html
+edf-feph.org-141552/169 .html
+edf-feph.org-141552/17 .html
+edf-feph.org-141552/170 .html
+edf-feph.org-141552/171 .html
+edf-feph.org-141552/172 .html
+edf-feph.org-141552/173 .html
+edf-feph.org-141552/174 .html
+edf-feph.org-141552/175 .html
+edf-feph.org-141552/176 .html
+edf-feph.org-141552/177 .html
+edf-feph.org-141552/178 .html
+edf-feph.org-141552/179 .html
+edf-feph.org-141552/18 .html
+edf-feph.org-141552/180 .html
+edf-feph.org-141552/181 .html
+edf-feph.org-141552/182 .html
+edf-feph.org-141552/183 .html
+edf-feph.org-141552/184 .html
+edf-feph.org-141552/185 .html
+edf-feph.org-141552/186 .html
+edf-feph.org-141552/187 .html
+edf-feph.org-141552/188 .html
+edf-feph.org-141552/189 .html
+edf-feph.org-141552/19 .html
+edf-feph.org-141552/190 .html
+edf-feph.org-141552/191 .html
+edf-feph.org-141552/192 .html
+edf-feph.org-141552/193 .html
+edf-feph.org-141552/194 .html
+edf-feph.org-141552/195 .html
+edf-feph.org-141552/196 .html
+edf-feph.org-141552/197 .html
+edf-feph.org-141552/198 .html
+edf-feph.org-141552/199 .html
+edf-feph.org-141552/2 .html
+edf-feph.org-141552/20 .html
+edf-feph.org-141552/200 .html
+edf-feph.org-141552/201 .html
+edf-feph.org-141552/202 .html
+edf-feph.org-141552/203 .html
+edf-feph.org-141552/204 .html
+edf-feph.org-141552/205 .html
+edf-feph.org-141552/206 .html
+edf-feph.org-141552/207 .html
+edf-feph.org-141552/208 .html
+edf-feph.org-141552/209 .html
+edf-feph.org-141552/21 .html
+edf-feph.org-141552/210 .html
+edf-feph.org-141552/211 .html
+edf-feph.org-141552/212 .html
+edf-feph.org-141552/213 .html
+edf-feph.org-141552/214 .html
+edf-feph.org-141552/215 .html
+edf-feph.org-141552/216 .html
+edf-feph.org-141552/217 .html
+edf-feph.org-141552/218 .html
+edf-feph.org-141552/219 .html
+edf-feph.org-141552/22 .html
+edf-feph.org-141552/220 .html
+edf-feph.org-141552/221 .html
+edf-feph.org-141552/222 .html
+edf-feph.org-141552/223 .html
+edf-feph.org-141552/224 .html
+edf-feph.org-141552/225 .html
+edf-feph.org-141552/226 .html
+edf-feph.org-141552/227 .html
+edf-feph.org-141552/228 .html
+edf-feph.org-141552/229 .html
+edf-feph.org-141552/23 .html
+edf-feph.org-141552/230 .html
+edf-feph.org-141552/231 .html
+edf-feph.org-141552/232 .html
+edf-feph.org-141552/233 .html
+edf-feph.org-141552/234 .html
+edf-feph.org-141552/235 .html
+edf-feph.org-141552/236 .html
+edf-feph.org-141552/237 .html
+edf-feph.org-141552/238 .html
+edf-feph.org-141552/239 .html
+edf-feph.org-141552/24 .html
+edf-feph.org-141552/240 .html
+edf-feph.org-141552/241 .html
+edf-feph.org-141552/242 .html
+edf-feph.org-141552/243 .html
+edf-feph.org-141552/244 .html
+edf-feph.org-141552/245 .html
+edf-feph.org-141552/246 .html
+edf-feph.org-141552/247 .html
+edf-feph.org-141552/248 .html
+edf-feph.org-141552/249 .html
+edf-feph.org-141552/25 .html
+edf-feph.org-141552/250 .html
+edf-feph.org-141552/251 .html
+edf-feph.org-141552/252 .html
+edf-feph.org-141552/253 .html
+edf-feph.org-141552/254 .html
+edf-feph.org-141552/255 .html
+edf-feph.org-141552/256 .html
+edf-feph.org-141552/257 .html
+edf-feph.org-141552/258 .html
+edf-feph.org-141552/259 .html
+edf-feph.org-141552/26 .html
+edf-feph.org-141552/260 .html
+edf-feph.org-141552/27 .html
+edf-feph.org-141552/28 .html
+edf-feph.org-141552/29 .html
+edf-feph.org-141552/3 .html
+edf-feph.org-141552/30 .html
+edf-feph.org-141552/31 .html
+edf-feph.org-141552/32 .html
+edf-feph.org-141552/33 .html
+edf-feph.org-141552/34 .html
+edf-feph.org-141552/35 .html
+edf-feph.org-141552/36 .html
+edf-feph.org-141552/37 .html
+edf-feph.org-141552/38 .html
+edf-feph.org-141552/39 .html
+edf-feph.org-141552/4 .html
+edf-feph.org-141552/40 .html
+edf-feph.org-141552/41 .html
+edf-feph.org-141552/42 .html
+edf-feph.org-141552/43 .html
+edf-feph.org-141552/44 .html
+edf-feph.org-141552/45 .html
+edf-feph.org-141552/46 .html
+edf-feph.org-141552/47 .html
+edf-feph.org-141552/48 .html
+edf-feph.org-141552/49 .html
+edf-feph.org-141552/5 .html
+edf-feph.org-141552/50 .html
+edf-feph.org-141552/51 .html
+edf-feph.org-141552/52 .html
+edf-feph.org-141552/53 .html
+edf-feph.org-141552/54 .html
+edf-feph.org-141552/55 .html
+edf-feph.org-141552/56 .html
+edf-feph.org-141552/57 .html
+edf-feph.org-141552/58 .html
+edf-feph.org-141552/59 .html
+edf-feph.org-141552/6 .html
+edf-feph.org-141552/60 .html
+edf-feph.org-141552/61 .html
+edf-feph.org-141552/62 .html
+edf-feph.org-141552/63 .html
+edf-feph.org-141552/64 .html
+edf-feph.org-141552/65 .html
+edf-feph.org-141552/66 .html
+edf-feph.org-141552/67 .html
+edf-feph.org-141552/68 .html
+edf-feph.org-141552/69 .html
+edf-feph.org-141552/7 .html
+edf-feph.org-141552/70 .html
+edf-feph.org-141552/71 .html
+edf-feph.org-141552/72 .html
+edf-feph.org-141552/73 .html
+edf-feph.org-141552/74 .html
+edf-feph.org-141552/75 .html
+edf-feph.org-141552/76 .html
+edf-feph.org-141552/77 .html
+edf-feph.org-141552/78 .html
+edf-feph.org-141552/79 .html
+edf-feph.org-141552/8 .html
+edf-feph.org-141552/80 .html
+edf-feph.org-141552/81 .html
+edf-feph.org-141552/82 .html
+edf-feph.org-141552/83 .html
+edf-feph.org-141552/84 .html
+edf-feph.org-141552/85 .html
+edf-feph.org-141552/86 .html
+edf-feph.org-141552/87 .html
+edf-feph.org-141552/88 .html
+edf-feph.org-141552/89 .html
+edf-feph.org-141552/9 .html
+edf-feph.org-141552/90 .html
+edf-feph.org-141552/91 .html
+edf-feph.org-141552/92 .html
+edf-feph.org-141552/93 .html
+edf-feph.org-141552/94 .html
+edf-feph.org-141552/95 .html
+edf-feph.org-141552/96 .html
+edf-feph.org-141552/97 .html
+edf-feph.org-141552/98 .html
+edf-feph.org-141552/99 .html
+edf-feph.org-141537/1 .html
+edf-feph.org-141537/10 .html
+edf-feph.org-141537/100 .html
+edf-feph.org-141537/101 .html
+edf-feph.org-141537/102 .html
+edf-feph.org-141537/103 .html
+edf-feph.org-141537/104 .html
+edf-feph.org-141537/105 .html
+edf-feph.org-141537/106 .html
+edf-feph.org-141537/107 .html
+edf-feph.org-141537/108 .html
+edf-feph.org-141537/109 .html
+edf-feph.org-141537/11 .html
+edf-feph.org-141537/110 .html
+edf-feph.org-141537/111 .html
+edf-feph.org-141537/112 .html
+edf-feph.org-141537/113 .html
+edf-feph.org-141537/114 .html
+edf-feph.org-141537/115 .html
+edf-feph.org-141537/116 .html
+edf-feph.org-141537/117 .html
+edf-feph.org-141537/118 .html
+edf-feph.org-141537/119 .html
+edf-feph.org-141537/12 .html
+edf-feph.org-141537/120 .html
+edf-feph.org-141537/121 .html
+edf-feph.org-141537/122 .html
+edf-feph.org-141537/123 .html
+edf-feph.org-141537/124 .html
+edf-feph.org-141537/125 .html
+edf-feph.org-141537/126 .html
+edf-feph.org-141537/127 .html
+edf-feph.org-141537/128 .html
+edf-feph.org-141537/129 .html
+edf-feph.org-141537/13 .html
+edf-feph.org-141537/130 .html
+edf-feph.org-141537/131 .html
+edf-feph.org-141537/132 .html
+edf-feph.org-141537/133 .html
+edf-feph.org-141537/134 .html
+edf-feph.org-141537/135 .html
+edf-feph.org-141537/136 .html
+edf-feph.org-141537/137 .html
+edf-feph.org-141537/138 .html
+edf-feph.org-141537/139 .html
+edf-feph.org-141537/14 .html
+edf-feph.org-141537/140 .html
+edf-feph.org-141537/141 .html
+edf-feph.org-141537/142 .html
+edf-feph.org-141537/143 .html
+edf-feph.org-141537/144 .html
+edf-feph.org-141537/145 .html
+edf-feph.org-141537/146 .html
+edf-feph.org-141537/147 .html
+edf-feph.org-141537/148 .html
+edf-feph.org-141537/149 .html
+edf-feph.org-141537/15 .html
+edf-feph.org-141537/150 .html
+edf-feph.org-141537/151 .html
+edf-feph.org-141537/152 .html
+edf-feph.org-141537/153 .html
+edf-feph.org-141537/154 .html
+edf-feph.org-141537/155 .html
+edf-feph.org-141537/156 .html
+edf-feph.org-141537/157 .html
+edf-feph.org-141537/158 .html
+edf-feph.org-141537/159 .html
+edf-feph.org-141537/16 .html
+edf-feph.org-141537/160 .html
+edf-feph.org-141537/161 .html
+edf-feph.org-141537/162 .html
+edf-feph.org-141537/163 .html
+edf-feph.org-141537/164 .html
+edf-feph.org-141537/165 .html
+edf-feph.org-141537/166 .html
+edf-feph.org-141537/167 .html
+edf-feph.org-141537/168 .html
+edf-feph.org-141537/169 .html
+edf-feph.org-141537/17 .html
+edf-feph.org-141537/170 .html
+edf-feph.org-141537/171 .html
+edf-feph.org-141537/172 .html
+edf-feph.org-141537/173 .html
+edf-feph.org-141537/174 .html
+edf-feph.org-141537/175 .html
+edf-feph.org-141537/176 .html
+edf-feph.org-141537/177 .html
+edf-feph.org-141537/178 .html
+edf-feph.org-141537/179 .html
+edf-feph.org-141537/18 .html
+edf-feph.org-141537/180 .html
+edf-feph.org-141537/181 .html
+edf-feph.org-141537/182 .html
+edf-feph.org-141537/183 .html
+edf-feph.org-141537/184 .html
+edf-feph.org-141537/185 .html
+edf-feph.org-141537/186 .html
+edf-feph.org-141537/187 .html
+edf-feph.org-141537/188 .html
+edf-feph.org-141537/189 .html
+edf-feph.org-141537/19 .html
+edf-feph.org-141537/190 .html
+edf-feph.org-141537/191 .html
+edf-feph.org-141537/192 .html
+edf-feph.org-141537/193 .html
+edf-feph.org-141537/194 .html
+edf-feph.org-141537/195 .html
+edf-feph.org-141537/196 .html
+edf-feph.org-141537/197 .html
+edf-feph.org-141537/198 .html
+edf-feph.org-141537/199 .html
+edf-feph.org-141537/2 .html
+edf-feph.org-141537/20 .html
+edf-feph.org-141537/200 .html
+edf-feph.org-141537/201 .html
+edf-feph.org-141537/202 .html
+edf-feph.org-141537/203 .html
+edf-feph.org-141537/204 .html
+edf-feph.org-141537/205 .html
+edf-feph.org-141537/206 .html
+edf-feph.org-141537/207 .html
+edf-feph.org-141537/208 .html
+edf-feph.org-141537/209 .html
+edf-feph.org-141537/21 .html
+edf-feph.org-141537/210 .html
+edf-feph.org-141537/211 .html
+edf-feph.org-141537/212 .html
+edf-feph.org-141537/213 .html
+edf-feph.org-141537/214 .html
+edf-feph.org-141537/215 .html
+edf-feph.org-141537/216 .html
+edf-feph.org-141537/217 .html
+edf-feph.org-141537/218 .html
+edf-feph.org-141537/219 .html
+edf-feph.org-141537/22 .html
+edf-feph.org-141537/220 .html
+edf-feph.org-141537/221 .html
+edf-feph.org-141537/222 .html
+edf-feph.org-141537/223 .html
+edf-feph.org-141537/224 .html
+edf-feph.org-141537/225 .html
+edf-feph.org-141537/23 .html
+edf-feph.org-141537/24 .html
+edf-feph.org-141537/25 .html
+edf-feph.org-141537/26 .html
+edf-feph.org-141537/27 .html
+edf-feph.org-141537/28 .html
+edf-feph.org-141537/29 .html
+edf-feph.org-141537/3 .html
+edf-feph.org-141537/30 .html
+edf-feph.org-141537/31 .html
+edf-feph.org-141537/32 .html
+edf-feph.org-141537/33 .html
+edf-feph.org-141537/34 .html
+edf-feph.org-141537/35 .html
+edf-feph.org-141537/36 .html
+edf-feph.org-141537/37 .html
+edf-feph.org-141537/38 .html
+edf-feph.org-141537/39 .html
+edf-feph.org-141537/4 .html
+edf-feph.org-141537/40 .html
+edf-feph.org-141537/41 .html
+edf-feph.org-141537/42 .html
+edf-feph.org-141537/43 .html
+edf-feph.org-141537/44 .html
+edf-feph.org-141537/45 .html
+edf-feph.org-141537/46 .html
+edf-feph.org-141537/47 .html
+edf-feph.org-141537/48 .html
+edf-feph.org-141537/49 .html
+edf-feph.org-141537/5 .html
+edf-feph.org-141537/50 .html
+edf-feph.org-141537/51 .html
+edf-feph.org-141537/52 .html
+edf-feph.org-141537/53 .html
+edf-feph.org-141537/54 .html
+edf-feph.org-141537/55 .html
+edf-feph.org-141537/56 .html
+edf-feph.org-141537/57 .html
+edf-feph.org-141537/58 .html
+edf-feph.org-141537/59 .html
+edf-feph.org-141537/6 .html
+edf-feph.org-141537/60 .html
+edf-feph.org-141537/61 .html
+edf-feph.org-141537/62 .html
+edf-feph.org-141537/63 .html
+edf-feph.org-141537/64 .html
+edf-feph.org-141537/65 .html
+edf-feph.org-141537/66 .html
+edf-feph.org-141537/67 .html
+edf-feph.org-141537/68 .html
+edf-feph.org-141537/69 .html
+edf-feph.org-141537/7 .html
+edf-feph.org-141537/70 .html
+edf-feph.org-141537/71 .html
+edf-feph.org-141537/72 .html
+edf-feph.org-141537/73 .html
+edf-feph.org-141537/74 .html
+edf-feph.org-141537/75 .html
+edf-feph.org-141537/76 .html
+edf-feph.org-141537/77 .html
+edf-feph.org-141537/78 .html
+edf-feph.org-141537/79 .html
+edf-feph.org-141537/8 .html
+edf-feph.org-141537/80 .html
+edf-feph.org-141537/81 .html
+edf-feph.org-141537/82 .html
+edf-feph.org-141537/83 .html
+edf-feph.org-141537/84 .html
+edf-feph.org-141537/85 .html
+edf-feph.org-141537/86 .html
+edf-feph.org-141537/87 .html
+edf-feph.org-141537/88 .html
+edf-feph.org-141537/89 .html
+edf-feph.org-141537/9 .html
+edf-feph.org-141537/90 .html
+edf-feph.org-141537/91 .html
+edf-feph.org-141537/92 .html
+edf-feph.org-141537/93 .html
+edf-feph.org-141537/94 .html
+edf-feph.org-141537/95 .html
+edf-feph.org-141537/96 .html
+edf-feph.org-141537/97 .html
+edf-feph.org-141537/98 .html
+edf-feph.org-141537/99 .html
+data/
